Add recipe for tacos dorados

--- a/recipes/tacos-dorados.html
+++ b/recipes/tacos-dorados.html
@@ -2,25 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Entomatadas</title>
+    <title>Tacos Dorados</title>
 </head>
 
 <body>
-    <h1>Entomatadas</h1>
-    <img src="" alt="">
-    <p>Description</p>
+    <h1>Tacos Dorados</h1>
+    <img src="https://t1.rg.ltmcdn.com/es/posts/2/9/4/tacos_dorados_de_jamon_y_queso_55492_orig.jpg" 
+    alt="Fried tortillas rolled into a tube, filled with potato and
+    chorizo, topped with chopped lettuce, cheese, and cream">
+    <p>Tacos dorados are a classic "antojito". Also known as
+        flautas, they can contain many different fillings and 
+        can be topped with many different salsas. This recipe 
+        will use potato and chorizo as a filling. A recommended 
+        salsa for this dish is <a href="recipes/salsa-verd
+        e.html">salsa verde.</a> Serves two.</p>
 
     <h3>Ingredients</h3>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>1/2 kg of tortilla</li>
+        <li>1/4 kg of chorizo (Mexican)</li>
+        <li>3 small potatoes</li>
+        <li>A small chunk of lettuce</li>
+        <li>1/4 kg of queso panela or queso de aro</li>
+        <li>1 lime</li>
+        <li>1 cup of mayonnaise (preferably with lime)</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Cut potatoes and boil them.</li>
+        <li>Chop lettuce finely and desinfect.</li>
+        <li>In a small frying pan, cook chorizo.</li>
+        <li>Once completely cooked, mash potatoes together with 
+            chorizo.</li>
+        <li>Heat a good amount of oil in a large frying pan. Roll 
+            tortillas with the potato/chorizo filling and fry, 
+            rotating the taco every couple minutes. Remove once 
+            crispy.</li>
+        <li>Use spatula to cover all sides of the taco with 
+            mayonnaise. Top with rinsed lettuce, cheese, and 
+            <a href="recipes/salsa-verde">salsa verde.</a></li>
     </ol>
 </body>
 </html>
