Add serves two message to entomatadas description

--- a/recipes/entomatadas.html
+++ b/recipes/entomatadas.html
@@ -12,7 +12,7 @@
     cream, cheese, avocado and parsley">
     <p>A classic Mexican dish, consisting in tortillas dipped/smothered 
         in a tomato and chile sauce. Recipe calls for chicken, but it
-        is optional. </p>
+        is optional. Serves two.</p>
 
     <h3>Ingredients</h3>
     <ul>
