add header and styles

--- a/recipes/quesadillas.html
+++ b/recipes/quesadillas.html
@@ -2,25 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Entomatadas</title>
+    <title>Quesadillas</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
-    <h1>Entomatadas</h1>
-    <img src="" alt="">
-    <p>Description</p>
+    <header>
+        <h1><a href="../index.html"><span class="lightred">Odin </span>Recipes</a></h1>
+    </header>
+    <h1>Quesadillas</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/Quesadilla_2.jpg" 
+    alt="Three quesadillas on a white plate.">
+    <p>Cheese in a tortilla. There's really not much to it.</p>
 
     <h3>Ingredients</h3>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Quesillo</li>
+        <li>Tortilla</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Heat tortillas on a comal or in a pan, face down 
+            at first. Once starting to firm up a little, flip 
+            tortilla onto its back.</li>
+        <li>Fill tortilla with shredded quesillo.</li>
+        <li>Cook quesadilla until desired crispiness.
+            Serve with salsa.</li>
     </ol>
 </body>
 </html>
