--- a/recipes/tacos-dorados.html
+++ b/recipes/tacos-dorados.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Tacos Dorados</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
+    <header>
+        <h1><a href="../index.html"><span class="lightred">Odin </span>Recipes</a></h1>
+    </header>
     <h1>Tacos Dorados</h1>
     <img src="https://t1.rg.ltmcdn.com/es/posts/2/9/4/tacos_dorados_de_jamon_y_queso_55492_orig.jpg" 
     alt="Fried tortillas rolled into a tube, filled with potato and
-    chorizo, topped with chopped lettuce, cheese, and cream">
+    chorizo, topped with chopped lettuce, cheese, and cream.">
     <p>Tacos dorados are a classic "antojito". Also known as
         flautas, they can contain many different fillings and 
         can be topped with many different salsas. This recipe 
         will use potato and chorizo as a filling. A recommended 
-        salsa for this dish is <a href="recipes/salsa-verd
-        e.html">salsa verde.</a> Serves two.</p>
+        salsa for this dish is <a href="salsa-verde.html">salsa 
+        verde.</a> Serves two.</p>
 
     <h3>Ingredients</h3>
     <ul>
@@ -40,7 +44,7 @@
             crispy.</li>
         <li>Use spatula to cover all sides of the taco with 
             mayonnaise. Top with rinsed lettuce, cheese, and 
-            <a href="recipes/salsa-verde">salsa verde.</a></li>
+            <a href="salsa-verde.html">salsa verde.</a></li>
     </ol>
 </body>
 </html>
