--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Neat Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/entomatadas.html">Entomatadas</a></li>
-        <li><a href="recipes/tacos-dorados.html">Tacos Dorados</a></li>
-        <li><a href="recipes/quesadillas.html">Quesadillas</a></li>
-    </ul>
+    <header>
+        <h1><span class="lightred">Odin </span>Recipes</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="recipes/entomatadas.html">Entomatadas</a></li>
+            <li><a href="recipes/tacos-dorados.html">Tacos Dorados</a></li>
+            <li><a href="recipes/quesadillas.html">Quesadillas</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
